--- a/src/pages/clipping/clipping.css
+++ b/src/pages/clipping/clipping.css
@@ -12,7 +12,6 @@
 
 .main-card {
   flex: 3;
-  color: primary-text-color;
 }
 
 .hr {
