--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -1,7 +1,11 @@
 
 body
-  font-family Lato, -apple-system, BlinkMacSystemFont, Lato,"Microsoft Jhenghei","Hiragino Sans GB","Microsoft YaHei",sans-serif;
-  scroll-behavior smooth;
+  font-family Lato, -apple-system, BlinkMacSystemFont, Lato,"Microsoft Jhenghei","Hiragino Sans GB","Microsoft YaHei",sans-serif
+  scroll-behavior smooth
+
+:root
+  --gray-text-color #707070
+
 
 a
   text-decoration none
